[package]
name = "scrunchie"
version = "0.1.0"
authors = ["Samuel Bowman <sam@sambowman.tech>"]
edition = "2018"
description = "Scrunches images with seam carving"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
indicatif = "0.15.0"
image = "0.23.10"
